--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "electron": "^3.0.10",
     "tslint": "^5.10.0",
     "typescript": "^3.1.6"
+  },
+  "dependencies": {
+    "ffmpeg-static-electron": "^2.0.1",
+    "fluent-ffmpeg": "^2.1.2"
   }
 }
